# llibs

./: CMakeLists.txt  llibs.h  readme.md
cross/: llibs.h
cross/c/: io.h  types.h
cross/cpp/: types.hpp
cross/inc/: string.c
cross/include/: defs.h  dir.h  dtypes.h  file.h  io.h  llibs.h  llibs.hpp  main.h  mem.h  str.h  string.h  thread.h  types.h
cross/include/c/: args.h  assert.h  bits.h  io.h  locale.h  logs.h  math.h  mem.h  str.h  time.h  types.h
cross/include/c/math/: matrix.h  space.h
cross/include/c/structures/: stack.h
cross/include/cpp/: io.hpp
cross/src/: mem.c  str.c  string.c
cross/src/c/: mem.c  str.c
examples/: helloworld.c  helloworld.cpp
examples/helloWorld/src/: main.c
examples/makefile_example/: readme.md
ldefs/: ldefs.h
ldtypes/: ldtypes.h  ldtypes_x64.h
lfiles/: lfiles.c  lfiles.h
lio/: lio.h
lmem/: lmem.h
lthreads/: lthreads.h
ltuples/: ltuples.c  ltuples.h  ltuples_util.h
ltypes/: lchar.h  lerror.h  ltypes.h
native/Linux/src/: dir.c  io.c
native/Windows/src/: dir.c  io.c  main.c  windows.c  windows.d
scripts/: native.js
scripts/assets/: os.json
